# RSPCP_bachelors_thesis

./: .example.env  .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  justfile  main.py  mkdocs.yml  pyproject.toml
.claude/agent-memory/fintech-python-engineer/: MEMORY.md
.claude/agent-memory/quant-crypto-architect/: MEMORY.md  project_arch_variance_ratio_api.md  project_rc3_pivot_decision.md  rc2_agent2_stationarity.md  rc2_agent2_thresholds.md  rc2_final_results.md  rc2_plan_audit_findings.md  rc2_s3_agent2_validation.md  rc2_s3_agent3_deep_analysis.md  rc2_s4_agent3_r5_argument.md  rc2_s4_predictability.md
.claude/agent-memory/readme-docs-writer/: MEMORY.md
.claude/agent-memory/test-engineer/: MEMORY.md
.claude/agent-memory/thesis-writer-ua/: MEMORY.md  project_abstract_written.md  project_thesis_structure.md  project_university_requirements.md  user_dmytro_profile.md  user_profile.md
.claude/agents/: fintech-python-engineer.md  quant-crypto-architect.md  readme-docs-writer.md  test-engineer.md  thesis-writer-ua.md
.claude/context/: project_context.md
.github/: release.yml
.github/workflows/: ci.yml
docs/: presentation_and_defense.md  rc2_interpretation_guide.md  rc2_review_consolidated.md
research/: RC1_data_and_bars.ipynb  RC2_analysis.md  RC2_features_and_profiling.ipynb  RC2_plan_audit.md  RC7_conditional_breakeven.ipynb  RC7_ltcusdt_profiling.ipynb  RC7_mi_normalization.ipynb  RC7_profiling_closure.ipynb  RC7_solusdt_tier_b_protocol.ipynb  RC7_stationarity_policy.html  RC7_stationarity_policy.ipynb  presentation.html
research/RC1/: RC1_analysis.md  RC1_data_and_bars.ipynb
research/RC2/: RC2_features_and_profiling.html  RC2_features_and_profiling.ipynb  RC2_gating_test.html  RC2_gating_test.ipynb  RC2_plan_updates.md  RC2_vol_feasibility.html  RC2_vol_feasibility.ipynb
research/RC2/rc2_sections/: rc2_s3_feature_exploration.md  rc2_s6_data_adequacy.md  rc2_s8_go_nogo.md
research/RC3/: RC3_classification.ipynb  RC3_combined_pipeline.ipynb  RC3_plan_b.html  RC3_plan_b.ipynb  RC3_regression.ipynb
research/RC7/: RC7_analysis.md  RC7_conditional_breakeven.html  RC7_conditional_breakeven.ipynb  RC7_ltcusdt_profiling.html  RC7_mi_normalization.html  RC7_profiling_closure.html  RC7_profiling_closure.ipynb  RC7_solusdt_tier_b_protocol.html
research/rc2_sections/: rc2_s1_preregistration.md  rc2_s2_stationarity.md  rc2_s4_predictability.md  rc2_s5_statistical_profiling.md  rc2_s7_baselines.md
src/: __init__.py
src/app/: __init__.py
src/app/backtest/: __init__.py
src/app/backtest/application/: __init__.py  baselines.py  cost_sweep.py  execution.py  metrics.py  position_sizer.py  walk_forward.py
src/app/backtest/domain/: __init__.py  entities.py  protocols.py  value_objects.py
src/app/bars/: README.md  __init__.py  cli.py
src/app/bars/application/: __init__.py  _aggregation.py  dollar_bars.py  imbalance_bars.py  run_bars.py  tick_bars.py  volume_bars.py
src/app/bars/domain/: __init__.py  entities.py  protocols.py  value_objects.py
src/app/bars/infrastructure/: __init__.py  duckdb_repository.py
src/app/features/application/: __init__.py  cross_asset_features.py  feature_matrix.py  indicators.py  targets.py  validation.py
src/app/features/domain/: __init__.py  entities.py  value_objects.py
src/app/forecasting/: __init__.py
src/app/forecasting/application/: __init__.py  arima_garch.py  calibration.py  classification_metrics.py  gradient_boosting_clf.py  gradient_boosting_reg.py  gru_classifier.py  gru_regressor.py  har_rv.py  label_overlap.py  logistic_baseline.py  naive_classifiers.py  random_forest_clf.py  regression_metrics.py  ridge_baseline.py  sanity_checks.py
src/app/forecasting/domain/: __init__.py  protocols.py  (+1 more)
src/app/ingestion/: cli.py
src/app/ohlcv/: __init__.py
src/app/profiling/: __init__.py
src/app/recommendation/: __init__.py
src/app/research/: __init__.py
src/app/strategy/: __init__.py
src/app/system/: __init__.py  logging.py
src/tests/: __init__.py  conftest.py
src/tests/backtest/: __init__.py  conftest.py  test_baselines.py  test_cost_sweep.py  test_domain.py  test_execution.py  test_metrics.py  test_position_sizer.py  test_walk_forward.py
src/tests/bars/: README.md  __init__.py  conftest.py
src/tests/features/: conftest.py  test_cross_asset_features.py  test_entities.py  test_feature_matrix.py  test_indicators.py  test_indicators_property.py  test_leakage.py  test_targets.py  test_validation_helpers.py  test_validation_integration.py  test_value_objects.py
src/tests/forecasting/: __init__.py  conftest.py  test_arima_garch.py  test_calibration.py  test_classification_metrics.py  test_classifiers.py  test_cpcv.py  test_gradient_boosting.py  test_gru_regressor.py  test_har_rv.py  test_label_overlap.py  test_regression_metrics.py  test_ridge_baseline.py  test_sanity_checks.py  test_value_objects.py
src/tests/ingestion/: __init__.py  conftest.py
src/tests/profiling/: __init__.py  conftest.py  test_data_partition.py  test_distribution.py  test_predictability.py  test_serial_dependence.py  test_services.py  test_stationarity.py  test_tier_classification.py  test_volatility.py
src/tests/recommendation/: __init__.py  conftest.py  test_domain.py  test_feature_builder.py  test_label_builder.py  test_metrics_and_ablation.py  test_pipeline.py  test_recommender_models.py
src/tests/research/: conftest.py  test_autocorrelation_analyzer.py  test_bar_comparator.py  test_bokeh_charts.py  test_coverage_analyzer.py  test_cpcv_splitter.py  test_data_loader.py  test_matplotlib_charts.py  test_rc2_feature_rationale.py  test_rc2_features.py  test_rc2_notebook_dryrun.py  test_rc2_phase7.py  test_rc2_predictability.py  test_rc2_preregistration.py  test_rc2_stationarity.py  test_rc2_thresholds.py  test_rc2_validation_analysis.py  test_rc2_value_objects.py  test_return_analyzer.py
src/tests/strategy/: conftest.py  test_donchian_breakout.py  test_mean_reversion.py  test_momentum_crossover.py  test_no_trade.py  test_signal_diversity.py  test_volatility_targeting.py
(+95 files in other folders)
