[project]
name = "rspcp-bachelors-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "arch>=8.0.0",
    "bokeh>=3.9.0",
    "duckdb>=1.4.4",
    "duckdb-engine>=0.17.0",
    "isort>=8.0.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "mkdocs>=1.6.1",
    "mkdocs-api-autonav>=0.4.0",
    "mkdocs-material>=9.7.1",
    "mkdocstrings>=1.0.3",
    "mlflow>=3.9.0",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "polars>=1.38.1",
    "pre-commit>=4.5.1",
    "pydantic-settings>=2.13.1",
    "python-binance>=1.0.29",
    "scikit-learn>=1.7.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.46",
    "statsmodels>=0.14.6",
    "tenacity>=9.1.2",
    "typer>=0.24.1",
]

[tool.pyright]
include = ["src"]
exclude = ["src/tests/*", "src/app/research/*"]
venvPath = "."
venv = ".venv"
reportMissingImports = true
reportMissingTypeStubs = true
reportPrivateUsage = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv"
]

# Path to store cache
cache-dir = "~/.cache/ruff"

# Fix by default when run ruff
fix = true

# A list of file patterns to include when linting
include = ["*.py", "*.ipynb"]

# Style in which violation messages should be formatted
output-format = "concise"

# Hints how to fix lint violations
show-fixes = true

# Same as Black.
line-length = 119
indent-width = 4



[tool.ruff.lint]
# Ruff will raise warning f.e. if you use cyrylica "a" instead of unicode
allowed-confusables = []

# A list of rule codes or prefixes to consider fixable
fixable = ["ALL"]

# A list of rule codes or prefixes to ignore
ignore = [
    "ISC", "RSE102", "EM101", "TRY003", "EM102"
]

# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "F", "FAST", "ANN", "ASYNC", "C4", "DTZ", "EM", "INP", "PIE", "T20", "PT", "Q", "RSE", "RET",
    "SIM", "TID", "ARG", "PTH", "N", "PERF", "DOC", "D", "PLR", "UP", "TRY", "S", "B", "E"
]

# Comments starting with these tags will be ignored
task-tags = ["TODO"]

# A list of rule codes or prefixes to consider non-fixable
unfixable = []

extend-select = ["S", "B", "E", "PLR", "UP"]
preview = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/tests/*" = [
    "S101",    # assert is fine in tests
    "S105",    # hardcoded fake passwords are intentional
    "S106",    # hardcoded fake passwords are intentional
    "ANN",     # test code doesn't need strict type annotations
    "D",       # test code doesn't need docstrings
    "DOC",     # test code doesn't need Raises/Returns sections
    "PLR6301", # test methods don't use self — pytest requires instance methods
    "PLR2004", # magic values in assertions are idiomatic (assert len(x) == 2)
    "PLR0904", # too many public methods — test classes naturally exceed 20
    "PLR0913", # too many arguments — factory helpers and _make_bar need many params
    "PLR0917", # too many positional arguments — test factories need many params
    "ARG001",  # unused function arguments in factories are intentional (forward compat)
    "ARG002",  # unused fixture args trigger side-effects (e.g. set_binance_env)
    "PT012",   # multi-statement pytest.raises blocks are acceptable
    "PT017",   # assertion on exception in except block (testing chaining)
    "TRY301",  # raise-in-try is the point of exception tests
]
"**/alembic/versions/*.py" = [
    "D103"
]
"src/app/research/*" = [
    "ANN",     # research code uses untyped third-party libs (pandas, statsmodels, scipy, bokeh)
    "PLR6301", # research analyzers are stateless classes with no-self methods
]
"research/*.ipynb" = [
    "T201",    # print() is the primary output mechanism in notebooks
    "E402",    # imports after %matplotlib inline magic are unavoidable
    "E501",    # long lines in notebooks acceptable (f-strings with data)
    "ANN",     # notebooks don't need strict type annotations
    "B007",    # unused loop variables common in notebook iteration
    "D",       # notebooks don't need docstrings
    "DOC",     # notebooks don't need docstrings
    "F401",    # unused imports in notebooks are common (display, show, etc.)
    "F811",    # re-imports across cells are intentional (cell independence)
    "F821",    # cross-cell variable references are inherent to notebook execution
    "PD002",   # .applymap() used for styled DataFrame rendering
    "PERF401", # list comprehension vs loop — readability preferred in notebooks
    "PLR2004", # magic values in notebook analysis cells are expected
    "PLR6201", # set literal vs tuple — not enforced in notebooks
    "RET504",  # unnecessary assignment before return — clarity in notebooks
    "S101",    # assert used for notebook-internal validation guards
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
lines-after-imports = 2
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Prefer double quotes over double quotes.
quote-style = "double"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:websockets",
    "ignore::DeprecationWarning:binance",
]
markers = [
    "integration: marks tests as integration tests requiring a real DuckDB instance",
    "e2e: marks tests as end-to-end tests",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "isort>=8.0.1",
    "jupyterlab>=4.5.6",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
